--- a/A secret that we share/task-info.yaml
+++ b/A secret that we share/task-info.yaml
@@ -94,7 +94,7 @@ files:
       if __name__ == '__main__':
           TestUserProgram().run_tests()
     learner_created: false
-feedback_link: https://hyperskill.org/projects/236/stages/1186/implement#comment
+feedback_link: https://hyperskill.org/learn/step/18314#comment
 check_profile: hyperskill_go
 status: Solved
 feedback:
